// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders collaborators list correctly for admins 1`] = `
<div>
  <div
    class="ui divided relaxed list"
    role="list"
  >
    <div
      class="item"
      data-testid="user-item"
      role="listitem"
    >
      <img
        alt="John Garza"
        class="ui avatar image"
        src="test-file-stub"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          John Garza
          <small>
             - 
            richard06@merritt.net
          </small>
        </div>
        <div
          class="description"
        >
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Joined
               
            </div>
            <div
              class="item"
              role="listitem"
            >
              Added by 
              Unknown user
            </div>
          </div>
        </div>
      </div>
      <div
        class="right floated content"
      >
        <div
          class="ui mini fluid buttons"
        >
          <button
            class="ui basic icon negative left labeled button"
            data-testid="remove-button"
          >
            <i
              aria-hidden="true"
              class="remove icon"
            />
            Remove
          </button>
        </div>
      </div>
    </div>
    <div
      class="item"
      data-testid="user-item"
      role="listitem"
    >
      <img
        alt="devadmin"
        class="ui avatar image"
        src="test-file-stub"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          devadmin
          <small>
             - 
            admin@myproject.com
          </small>
        </div>
        <div
          class="description"
        >
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Joined
               
            </div>
            <div
              class="item"
              role="listitem"
            >
              Added by 
              Unknown user
            </div>
          </div>
        </div>
      </div>
      <div
        class="right floated content"
      >
        <div
          class="ui mini fluid buttons"
        >
          <button
            class="ui basic icon negative left labeled button"
            data-testid="remove-button"
          >
            <i
              aria-hidden="true"
              class="remove icon"
            />
            Remove
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders collaborators list correctly for non-admins 1`] = `
<div>
  <div
    class="ui divided relaxed list"
    role="list"
  >
    <div
      class="item"
      data-testid="user-item"
      role="listitem"
    >
      <img
        alt="John Garza"
        class="ui avatar image"
        src="test-file-stub"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          John Garza
          <small>
             - 
            richard06@merritt.net
          </small>
        </div>
        <div
          class="description"
        >
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Joined
               
            </div>
            <div
              class="item"
              role="listitem"
            >
              Added by 
              Unknown user
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="item"
      data-testid="user-item"
      role="listitem"
    >
      <img
        alt="devadmin"
        class="ui avatar image"
        src="test-file-stub"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          devadmin
          <small>
             - 
            admin@myproject.com
          </small>
        </div>
        <div
          class="description"
        >
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Joined
               
            </div>
            <div
              class="item"
              role="listitem"
            >
              Added by 
              Unknown user
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
